<resources>
    <string name="app_name">Direct News</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>

    <!-- Facebook Log in-->
    <string name="facebook_app_id" translatable="false">227997984502248</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb227997984502248</string>

    <string name="error_connection">Oups! connection failure</string>
    <string name="welcome_message">Sign in here</string>
    <string name="gButtonText">Sign in with Google</string>
    <string name="fButtonText">Sign in with Facebook</string>
    <string name="toConnect">Sign in</string>
    <string name="nameHint">Enter your new name</string>
    <string name="phoneHint">Enter your new number</string>
    <string name="loadingMsg">Loading …</string>
    <string name="error">An error has occurred!</string>
    <string name="permission_denied">Permission denied</string>
    <string name="headline_str">Headlines</string>
    <string name="region_str">Regions</string>
    <string name="rubrik_str">Headings</string>
    <string name="articles_search_str">Search for article</string>
    <string name="read_later_str">Favorites</string>
    <string name="share_app_str">Share application</string>
    <string name="share_app_msg">Download Direct News on android to follow the news every day! \n</string>
    <string name="cancel_str">Canceled operation</string>
    <string name="legal_notice_str">Legal notice</string>
    <string name="privacy_police_str">Privacy police</string>
    <string name="contact_str">Contact</string>
    <string name="credits_str">Credits</string>
    <string name="credits_details_str">\tDeveloper : Neteru Studio\n\tSource : newsapi.org\n</string>
    <string name="version_str">Version</string>
    <string name="about_str">About</string>
    <string name="name_modify_str">Change the name</string>
    <string name="mail_modify_str">Change the email address</string>
    <string name="disconnect_str">Sign out</string>
    <string name="actual_name_str">Current name - %1$s</string>
    <string name="modify_str">Edit</string>
    <string name="name_edited_success">Name changed successfully!</string>
    <string name="failed_str">Failure</string>
    <string name="empty_field_str">Empty field!</string>
    <string name="cancel_but_str">Cancel</string>
    <string name="actual_mail_str">Current mail - %1$s</string>
    <string name="mail_edited_success">Email address changed successfully!</string>
    <string name="disconnect_title_str">Disconnection</string>
    <string name="sure_disconnect_str">Are you sure to disconnect ?</string>
    <string name="yes_str">Yes</string>
    <string name="no_str">No</string>
    <string name="profil_title_str">Profile</string>
    <string name="modify_profil_str">Change your profile</string>
    <string name="select_in_gallery_str">Select in gallery</string>
    <string name="take_photo_str">Take a picture</string>
    <string name="loading_failed_str">Load failure</string>
    <string name="success_str">Success!</string>
    <string name="settings_title_str">Settings</string>
    <string name="saved_str">Saved</string>
    <string name="search_settings_str">Search parameters</string>
    <string name="image_saved_str">Saved!</string>
    <string name="tap_your_search_str">Type your search</string>
    <string name="no_result_str">No results found for: \' %1$s \'</string>
    <string name="world_str">World</string>
    <string name="africa_str">Africa</string>
    <string name="europa_str">Europa</string>
    <string name="america_str">America</string>
    <string name="asia_str">Asia</string>
    <string name="no_fav_str">no favorites!</string>
    <string name="economy_str">Economy</string>
    <string name="science_str">Science</string>
    <string name="health_str">Health</string>
    <string name="technology_str">Technology</string>
    <string name="culture_str">Culture</string>
    <string name="sport_str">Sport</string>
    <string name="just_now_str">Just now</string>
    <string name="ago_min_str">%1$d minute(s) ago</string>
    <string name="ago_hour_str">%1$d hour(s) ago</string>
    <string name="ago_day_str">%1$d day(s) ago</string>
    <string name="ago_week_str">%1$d week(s) ago</string>
    <string name="ago_month_str">%1$d month(s) ago</string>
    <string name="ago_year_str">%1$d year(s) ago</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="day_before_yesterday">Yesterday before</string>
    <string name="no_news_str">No news!</string>
    <string name="written_by_str">Written by %1$s</string>
    <string name="share_info_str">Share information</string>
    <string name="cant_share_info_str">Can\'t share info</string>
    <string name="allow_the_app_str">Allow the app to access your external storage</string>
    <string name="deleted_article_str">Deleted article</string>
    <string name="confirmation_title_str">Confirmation</string>
    <string name="delete_article_str">Delete the article ?</string>
    <string name="log_str">Sign in</string>
    <string name="follow_the_main_facts_str">Follow the main facts of today\'s news</string>
    <string name="save_image_str">Save the image</string>
    <string name="search_str">Rechercher</string>
    <string name="share_str">Share</string>
    <string name="others_str">Other options</string>
    <string name="french_str">French</string>
    <string name="english_str">English</string>
    <string name="deutch_str">German</string>
    <string name="spanish_str">Spanish</string>
    <string name="portuguese_str">Portuguese</string>
    <string name="daily_str">Daily</string>
    <string name="weekly_str">Weekly</string>
    <string name="number_of_news_str">Number of news</string>
    <string name="number_of_news_summary_str">Enter the number of news to display</string>
    <string name="notifications_str">Notifications</string>
    <string name="notifications_summary_str">Activate notifications</string>
    <string name="language_str">Languages</string>
    <string name="language_summary_str">Select the language of the news</string>
    <string name="notifFrequency_str">Frequency of notifications</string>
    <string name="notifFrequency_summary_str">Select the interval between notifications</string>
    <string name="domains_str">Domains</string>
    <string name="domains_hint_str">techcrunch.com, bbc.co.uk, &#8230;</string>
    <string name="date_range">Date range</string>
    <string name="from_str">From: aaaa-mm-jj</string>
    <string name="to_str">To: aaaa-mm-jj</string>
    <string name="toSave_str">Save</string>
    <string name="language_mandatory">Language</string>
    <string name="sortBy_mandatory">Order</string>
    <string name="relevance_str">Relevance</string>
    <string name="popularity_str">Popularity</string>
    <string name="date_str">Date</string>
    <string name="pass_str">Pass</string>
    <string name="chevron_str">chevron</string>
    <string name="illustration_str">Article illustration</string>
    <string name="connect_for_registration_str">Log in to save items and retrieve them at any time</string>
    <string name="open_settings_str">Open the settings</string>
    <string name="successful_connection">Successful connection!</string>
    <string name="twoDays_str">Every two days</string>
    <string name="notifNb_str">Number of news to display</string>
    <string name="notifNb_summary_str">Set the number of news to display in notifications</string>
    <string name="your_message">Your Message:</string>
    <string name="evaluate_str">Rate us</string>
    <string name="read_article">\n\nRead the article:\n</string>
    <string name="be_patient">Please wait a moment…</string>
    <string name="save">Save</string>
    <string name="saved">Saved!</string>
    <string name="copied_to_clipboard">Copied to the clipboard</string>
    <string name="share_via">Share via</string>
    <string name="copy_link">Copy the link</string>
    <string name="refresh">Refresh</string>
    <string name="open_with">Open in the browser</string>

</resources>
