<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.neteru.hermod.activities.ArticlesSettingsActivity">

    <ScrollView
        android:scrollbarThumbVertical="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:id="@+id/scrollView10"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/search_settings"
                android:visibility="visible"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/domains_str"
                    android:gravity="center"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.cardview.widget.CardView
                    app:cardElevation="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/domains"
                        android:hint="@string/domains_hint_str"
                        android:inputType="textMultiLine"
                        android:ems="10"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:background="@android:color/transparent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:ignore="Autofill" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:text="@string/date_range"
                    android:gravity="center"
                    android:textColor="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.cardview.widget.CardView
                    app:cardElevation="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/from"
                        android:hint="@string/from_str"
                        android:inputType="textMultiLine"
                        android:ems="10"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:background="@android:color/transparent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:ignore="Autofill" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    app:cardElevation="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/to"
                        android:hint="@string/to_str"
                        android:inputType="textMultiLine"
                        android:ems="10"
                        android:layout_margin="@dimen/activity_horizontal_margin"
                        android:background="@android:color/transparent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:ignore="Autofill" />

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:weightSum="2"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/language_mandatory"
                            android:textColor="@color/colorAccent"/>

                        <RadioGroup
                            android:id="@+id/language"
                            android:checkedButton="@+id/fr"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/french_str"
                                android:id="@+id/fr" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/english_str"
                                android:id="@+id/en" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/deutch_str"
                                android:id="@+id/de" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/portuguese_str"
                                android:id="@+id/pt" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/spanish_str"
                                android:id="@+id/es" />

                        </RadioGroup>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sortBy_mandatory"
                            android:textColor="@color/colorAccent"/>

                        <RadioGroup
                            android:id="@+id/sortBy"
                            android:checkedButton="@+id/relevancy"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/relevance_str"
                                android:id="@+id/relevancy" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/popularity_str"
                                android:id="@+id/popularity" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/date_str"
                                android:id="@+id/publishedAt" />

                        </RadioGroup>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/colorAccent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/toSave_str"
                android:id="@+id/articles_settings_save" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
